--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,3 +10,24 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+ul{
+    max-width: 500px;
+}
+
+li{
+    list-style: none;
+    border:1px solid black;
+    padding: 5px;
+}
+
+input{
+    width:100%;
+    border:none;
+}
+
+h1{
+    margin-left: 10px;
+}
+/* li:hover{
+    background-color: blue;
+} */
